--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,3 +25,19 @@
         src: url('../public/fonts/Montserrat.ttf');
     }
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+canvas {
+    width: 250px !important;
+    height: 250px !important;
+}
